# xpath_reader

./: .gitignore  CMakeLists.txt  COPYING  Config.cmake.in  Makefile.in  NEWS  acinclude.m4  aclocal.m4  configure  configure.ac
cmake/: CheckSanitizeOpts.cmake
examples/: CMakeLists.txt  Makefile.am  Makefile.in  basic_xpath_reader_test.cc  basic_xpath_reader_test2.cc  foo.xml  print_xpath.cc  schema_writer_test.cc  simple_writer_test.cc  xpath_reader_bool_test.cc  xpath_reader_test.cc
include/: Makefile.am  Makefile.in  array.h  attribute.h  basic_xpath_reader.h  document.h  qdp_xpath_reader.h  tcomplex.h  xml_array.h  xml_array2d.h  xml_array3d.h  xml_array4d.h  xml_array_writer.h  xml_document.h  xml_schemawriter.h  xml_simpleschemawriter.h  xml_simplewriter.h  xml_struct_writer.h  xml_writer.h  xpath_reader.h  xpath_reader_config_internal.h.cmake.in  xpath_reader_config_internal.h.in
lib/: CMakeLists.txt  Makefile.am  Makefile.in  attribute.cc  basic_xpath_reader.cc  document.cc  xml_simplewriter.cc  xml_struct_writer.cc  xml_writer.cc
